--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.2",
+    "@vercel/analytics": "^1.4.0",
     "astro": "^4.16.10",
     "tailwindcss": "^3.4.14"
   }
